add Recyclerview with Data Binding

--- a/app/src/main/res/layout/gallery_fragment.xml
+++ b/app/src/main/res/layout/gallery_fragment.xml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="viewModel"
+            type="com.jdavifranco.letswatch.ui.gallery.GalleryViewModel" />
+        <variable
+            name="movie"
+            type="com.jdavifranco.letswatch.database.Movie" />
+    </data>
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.gallery.GalleryFragment">
 
 
-    <TextView
-        android:id="@+id/txtResponse"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp" />
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_movies"
+        android:id="@+id/rvMovies"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
+</layout>
