--- a/app/src/main/res/layout/gallery_fragment.xml
+++ b/app/src/main/res/layout/gallery_fragment.xml
@@ -15,6 +15,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/gallery_background"
     tools:context=".ui.gallery.GalleryFragment">
 
 
@@ -23,6 +24,6 @@
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
 </layout>
