--- a/app/src/main/res/layout/gallery_fragment.xml
+++ b/app/src/main/res/layout/gallery_fragment.xml
@@ -11,19 +11,19 @@
             name="movie"
             type="com.jdavifranco.letswatch.database.Movie" />
     </data>
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/gallery_background"
-    tools:context=".ui.gallery.GalleryFragment">
-
+    android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvMovies"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
+
 </LinearLayout>
+
 </layout>
