--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -9,7 +9,7 @@ xmlns:tools="http://schemas.android.com/tools">
         type="com.jdavifranco.letswatch.database.Movie" />
 </data>
 <ScrollView
-    android:background="@color/purple_700"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -32,7 +32,7 @@ xmlns:tools="http://schemas.android.com/tools">
             android:layout_marginBottom="8dp"
             android:alpha="@dimen/material_emphasis_high_type"
             android:elevation="3dp"
-            app:cardBackgroundColor="@color/purple_900"
+            app:cardBackgroundColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/guideline2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -73,7 +73,7 @@ xmlns:tools="http://schemas.android.com/tools">
             android:maxLines="3"
             android:singleLine="false"
             android:text="@{movie.title}"
-            android:textColor="@color/white"
+            android:textColor="@color/design_default_color_primary_variant"
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/txtVoteAverage"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
@@ -86,7 +86,7 @@ xmlns:tools="http://schemas.android.com/tools">
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
             android:fontFamily="@font/urbanistregular"
-            android:textColor="@color/white"
+            android:textColor="@color/design_default_color_primary_variant"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/txtTitle"
             app:yearAndRuntime="@{movie}"
@@ -98,11 +98,11 @@ xmlns:tools="http://schemas.android.com/tools">
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginTop="12dp"
-            android:background="#3700B3"
+            android:background="@color/white"
             android:foregroundGravity="top|right"
             android:gravity="center|start"
             android:lineSpacingExtra="8sp"
-            android:textColor="@color/white"
+            android:textColor="@color/design_default_color_primary_variant"
             android:textSize="10sp"
             android:textStyle="bold"
             android:typeface="normal"
@@ -125,7 +125,7 @@ xmlns:tools="http://schemas.android.com/tools">
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/urbanistmedium"
-            android:textColor="@color/white"
+            android:textColor="@color/design_default_color_primary_variant"
             android:textSize="16sp"
             app:bindOverview="@{movie}"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
@@ -140,7 +140,7 @@ xmlns:tools="http://schemas.android.com/tools">
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/urbanistitalic"
-            android:textColor="@color/white"
+            android:textColor="@color/design_default_color_primary_variant"
             app:bindGenres="@{movie}"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/txtOverview"
