--- a/app/src/main/res/layout/gallery_item_layout.xml
+++ b/app/src/main/res/layout/gallery_item_layout.xml
@@ -46,7 +46,7 @@
             android:textColor="#9041F2"
             android:textSize="8sp"
             android:textStyle="bold"
-            app:voteAverage="@{movie}"
+            app:voteAverage="@{movie.voteAverage}"
             tools:text="7.7" />
 
     </androidx.cardview.widget.CardView>
