add domain package and make remote only datasource

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -6,7 +6,7 @@ xmlns:tools="http://schemas.android.com/tools">
 <data>
     <variable
         name="details"
-        type="com.jdavifranco.letswatch.datasource.local.model.Details" />
+        type="com.jdavifranco.letswatch.domain.model.Details" />
 </data>
 <ScrollView
     android:background="@color/white"
