--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.main.MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/topAppBar"
-            android:elevation="0dp"
-
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:title="Lets Watch"
-            app:menu="@menu/menu_principal"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary" />
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tab_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:tabMode="scrollable"
-            android:theme="@style/ThemeOverlay.App.TabLayout"/>
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager"
+    <LinearLayout
+        android:id="@+id/mainResponseStateView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:orientation="vertical">
+
+        <include android:id="@+id/loadingStateView"
+            layout="@layout/loading_state_layout"
+             android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            />
+
+        <include android:id="@+id/errorStateView"
+            layout="@layout/error_state_layout"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            />
+
+        <include android:id="@+id/successStateView"
+            layout="@layout/main_content"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            />
+
+    </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
