--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="responseState"
+            type="com.jdavifranco.letswatch.ui.utils.ResponseState" />
+
+    </data>
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.MainActivity">
+    android:orientation="vertical"
+    app:visibilityState="@{responseState}">
 
-    <LinearLayout
-        android:id="@+id/mainResponseStateView"
-        android:layout_width="match_parent"
+    <include android:id="@+id/loading_state"
+        layout="@layout/loading_state_layout"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        />
 
-        <include android:id="@+id/loadingStateView"
-            layout="@layout/loading_state_layout"
-             android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            />
+    <include android:id="@+id/error_state"
+        layout="@layout/error_state_layout"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        />
 
-        <include android:id="@+id/errorStateView"
-            layout="@layout/error_state_layout"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            />
+    <include android:id="@+id/success_state"
+        layout="@layout/main_content"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        />
 
-        <include android:id="@+id/successStateView"
-            layout="@layout/main_content"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            />
 
-    </LinearLayout>
+</LinearLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</layout>
