--- a/app/src/main/res/layout/gallery_fragment.xml
+++ b/app/src/main/res/layout/gallery_fragment.xml
@@ -4,25 +4,36 @@
 
     <data>
         <variable
-            name="viewModel"
-            type="com.jdavifranco.letswatch.ui.gallery.GalleryViewModel" />
-        <variable
-            name="movie"
-            type="com.jdavifranco.letswatch.domain.model.Movie" />
+            name="responseState"
+            type="com.jdavifranco.letswatch.ui.utils.ResponseState" />
+
     </data>
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvMovies"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:visibilityState="@{responseState}">
 
-</LinearLayout>
+        <include android:id="@+id/loading_state"
+            layout="@layout/loading_state_layout"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            />
+
+        <include android:id="@+id/error_state"
+            layout="@layout/error_state_layout"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            />
+
+        <include android:id="@+id/success_state"
+            layout="@layout/gallery_content"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            />
+
+
+    </LinearLayout>
 
 </layout>
